<resources>
    <string name="app_name">BeNFit</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="je_n_ai_pas_de_compte">Je n\'ai pas de compte</string>
    <string name="inscription">Inscription</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="nameSession">Nom de la séance</string>
    <string name="descSession">Description de la séance</string>
    <string name="nameExo">Nom de l\'exercice</string>
    <string name="descExo">Description de l\'exercice</string>
    <string name="descProgram">Description du programme</string>
    <string name="accountCreation">Créer un compte</string>
    <string-array name="level_array">
        <item>Débutant</item>
        <item>Intermédiaire</item>
        <item>Expert</item>
    </string-array>
    <string-array name="category_exo_array">
        <item>Sport</item>
        <item>Accrobranche</item>
        <item>Aerobic</item>
        <item>Aéromodélisme</item>
        <item>Aérostation</item>
        <item>Agility</item>
        <item>Aikido</item>
        <item>Airsoft</item>
        <item>Alpinisme</item>
        <item>Apnée</item>
        <item>Athlétisme</item>
        <item>Aviation</item>
        <item>Aviron</item>
        <item>Babyfoot</item>
        <item>Badminton</item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Biathlon</item>
        <item>Billard</item>
        <item>BMX</item>
        <item>Bobsleigh</item>
        <item>Boccia</item>
        <item>Bodyboard</item>
        <item>Boomerang</item>
        <item>Bowling</item>
        <item>Boxe</item>
        <item>Bridge</item>
        <item>Canoë</item>
        <item>Canoë</item>
        <item>Canyonisme</item>
        <item>Capoeira</item>
        <item>Carrom</item>
        <item>Catch</item>
        <item>Chanbara</item>
        <item>Cheerleading</item>
        <item>Cirque</item>
        <item>Claquettes</item>
        <item>Combat</item>
        <item>Course</item>
        <item>Cricket</item>
        <item>Croquet</item>
        <item>Crosse</item>
        <item>Crossfit</item>
        <item>Curling</item>
        <item>Cyclisme</item>
        <item>Danse</item>
        <item>Danse</item>
        <item>Deltaplane</item>
        <item>Echecs</item>
        <item>Equitation</item>
        <item>Escalade</item>
        <item>Escrime</item>
        <item>Fitness</item>
        <item>Flag</item>
        <item>Fléchettes</item>
        <item>Floorball</item>
        <item>Football</item>
        <item>Footing</item>
        <item>Funboard</item>
        <item>Futsal</item>
        <item>Giraviation</item>
        <item>Golf</item>
        <item>Gouren</item>
        <item>Grappling</item>
        <item>Gymnastique</item>
        <item>Haltérophilie</item>
        <item>Handball</item>
        <item>Handisport</item>
        <item>Hapkido</item>
        <item>Hockey</item>
        <item>Iaïdo</item>
        <item>Jetski</item>
        <item>Jodo</item>
        <item>Jorkyball</item>
        <item>Joutes</item>
        <item>Ju</item>
        <item>Judo</item>
        <item>Karaté</item>
        <item>Karting</item>
        <item>Kempo</item>
        <item>Kendo</item>
        <item>Kenjutsu</item>
        <item>Kitesurf</item>
        <item>Kobudo</item>
        <item>Krav</item>
        <item>Kyudo</item>
        <item>Lancer</item>
        <item>Lancer</item>
        <item>Lancer</item>
        <item>Luge</item>
        <item>Lutte</item>
        <item>Marche</item>
        <item>Monocycle</item>
        <item>Moto</item>
        <item>Motoneige</item>
        <item>Mountainboard</item>
        <item>Musculation</item>
        <item>Naginata</item>
        <item>Natation</item>
        <item>Natation</item>
        <item>Ninjitsu</item>
        <item>Nunchaku</item>
        <item>Omnikin</item>
        <item>Padel</item>
        <item>Paintball</item>
        <item>Pancrace</item>
        <item>Parachutisme</item>
        <item>Paramoteur</item>
        <item>Parapente</item>
        <item>Patinage</item>
        <item>Pêche</item>
        <item>Pentathlon</item>
        <item>Pétanque</item>
        <item>Peteca</item>
        <item>Planche</item>
        <item>Plongée</item>
        <item>Plongeon</item>
        <item>Polo</item>
        <item>Qi</item>
        <item>Quad</item>
        <item>Quilles</item>
        <item>Rafting</item>
        <item>Ragga</item>
        <item>Raid</item>
        <item>Rallye</item>
        <item>Randonnée</item>
        <item>Rock</item>
        <item>Roller</item>
        <item>Rugby</item>
        <item>Salsa</item>
        <item>Samba</item>
        <item>Sambo</item>
        <item>Sarbacane</item>
        <item>Sauvetage</item>
        <item>Skateboard</item>
        <item>Skeleton</item>
        <item>Ski</item>
        <item>Snowboard</item>
        <item>Softball</item>
        <item>Spéléologie</item>
        <item>Squash</item>
        <item>Sumo</item>
        <item>Surf</item>
        <item>Taekwondo</item>
        <item>Tambourin</item>
        <item>Tango</item>
        <item>Tennis</item>
        <item>Tir</item>
        <item>Tir</item>
        <item>Traîneaux</item>
        <item>Trampoline</item>
        <item>Triathlon</item>
        <item>Trottinette</item>
        <item>Tumbling</item>
        <item>ULM</item>
        <item>Ultimate</item>
        <item>Ultimate</item>
        <item>Varappe</item>
        <item>Vélo</item>
        <item>Voile</item>
        <item>Volleyball</item>
        <item>Voltige</item>
        <item>VTT</item>
        <item>Wakeboard</item>
        <item>Waterpolo</item>
        <item>Yoga</item>
        <item>Zumba</item>
    </string-array>
    <string name="poids">Poids</string>
    <string name="mail_mdp_incorrect">Email ou mot de passe incorrect</string>
    <string name="err_inscription">Erreur d\'inscription</string>
    <string name="vous_avez_un_compte">Vous avez déjà un compte</string>
    <string name="done">Terminé</string>
    <string name="welcomeBack">Bon retour parmis nous</string>
    <string name="hint_publication">A quoi pensez vous ?</string>
    <string name="publish">Publier</string>
    <string name="Name">Name</string>
    <string name="Content">Content</string>
    <string name="commentContent">Comment</string>
    <string name="commentsText">Votre commentaire …</string>
    <string name="mail">Email</string>
    <string name="date">Date</string>
    <string name="activityfeed">Fil d\'actualité</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="activity">Activité</string>
    <string name="community">Communauté</string>
    <string name="myspace">Mon espace</string>
    <string name="programs_list">Liste des programmes</string>
    <string name="sessions_list">Liste des séances</string>
    <string name="new_program">Nouveau programme</string>
    <string name="new_session">Nouvelle Séance</string>
    <string name="feed">Fil d\'actualité</string>
    <string name="new_publication">Nouvelle publication</string>
    <string name="my_profile">Mon Profil</string>
    <string name="img">img_desc</string>
    <string name="textview">TextView</string>
    <string name="urlYtb">URL Youtube</string>
    <string name="sportExo">Sport</string>
    <string name="difficultyExo">Difficulté de l\'exercice</string>
    <string name="round">TOURS</string>
    <string name="program_name">Nom du programme</string>
    <string name="prog_descr">Description du programme</string>
    <string name="_0">0</string>
    <string name="author">Auteur</string>
    <string name="exo_name">Nom de l\'exercice</string>
    <string name="exo_descr">Description de l\'exercice</string>
    <string name="consigne">Instruction : </string>
    <string name="value">Valeur Consigne</string>
    <string name="congratz_text">Félicitation John Doe</string>
    <string name="score_sportif_text">Score Sportif : X</string>
    <string name="grade0">Nouveau</string>
    <string name="grade1">Amateur</string>
    <string name="grade2">Sportif</string>
    <string name="grade3">Athlète</string>
    <string name="grade4">Professionnel</string>
    <string name="grade5">Compétiteur</string>
    <string name="coach_grade_0">Observateur</string>
    <string name="coach_grade_1">Entraîneur apprenti</string>
    <string name="coach_grade_2">Entraîneur sportif</string>
    <string name="coach_grade_3">Entraîneur professionnel</string>
    <string name="gradeText">Grade Sportif</string>
    <string name="coachGradeText">Grade Entraineur</string>
    <string name="session_name">Nom de la séance</string>
    <string name="shareName">Nom du partage</string>
    <string name="reachLink">Accéder au Lien</string>
    <string name="chooseImage">Choisir une photo</string>
    <string name="birthdate">Date de naissance</string>
    <string name="mailAddr">Adresse mail</string>
    <string name="kg">kilos</string>
    <string name="sports_list">Sports pratiqués</string>
    <string name="sportsListLabel">Liste des sports</string>
    <string name="fname_lname">Nom et prénom</string>
    <string name="updateProfile">Mise à jour du profil</string>
    <string name="selectSports">Sélection de sports</string>
    <string name="level">Niveau</string>
    <string name="exercices">Exercices</string>
    <string name="session">Séances</string>
    <string name="commentList">Commentaires</string>
    <string name="sportTemplate">Fitness</string>
    <string name="programList">Liste des programmes</string>
    <string name="sessionList">Liste des séances</string>
    <string name="difficult_ELEM">Difficulté : %1$s</string>
    <string name="sportInExo">(%1$s)</string>
    <string name="sportsPracticed">Sports pratiqués :&#160;</string>
    <string name="ConcatSport">%1$s%2$s&#160;</string>
    <string name="doubleWordsSpaced">%1$s %2$s</string>
    <string name="concatStringSpaced">%1$s %2$s</string>
    <string name="concatValueWeight">%1$s kilos</string>
    <string name="gradeFunctionning">Fonctionnement des grades</string>
    <string name="descrFonctGrade">Il existe deux sortes de grades sur BenFit :
        Les grades sportif et les grades coach. Vous disposez d\'un grade de chaque
        qui évoluera avec votre carrière sur BenFit.</string>
    <string name="descrFonctFirstGrade">Le premier grade est le grade Sportif, il correspond
        au programmes sportifs que vous avez effectué. A la fin de chaque programme, vous remportez
        des points qui se cumuleront pour calculer ce score.\nVoici les Grades Sportif que vous pouvez obtenir :</string>
    <string name="descrFonctSecondGrade">Le second grade est le grade Coach, il correspond au degré d\'appréciation
        des programmes, séances et exercices que vous avez créés. Ce grade est calculé par le nombre de mentions j\'aime
        sur chacune de ces publications.\nVoici les Grades Coach que vous pouvez obtenir :</string>
    <string name="scoreGrade0">(Score &lt; 30)</string>
    <string name="scoreGrade1">(30 &lt; Score &gt; 60)</string>
    <string name="scoreGrade2">(60 &lt; Score &gt; 90)</string>
    <string name="scoreGrade3">(90 &lt; Score &gt; 120)</string>
    <string name="scoreGrade4">(120 &lt; Score &gt; 150)</string>
    <string name="scoreGrade5">(Score &gt; 150)</string>
    <string name="coachScoreGrade0">(likes &lt; 15)</string>
    <string name="coachScoreGrade1">(15 &lt; likes &gt; 45)</string>
    <string name="coachScoreGrade2">(45 &lt; likes &gt; 80)</string>
    <string name="coachScoreGrade3">(likes &gt; 80)</string>
</resources>