<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isen.cedriclucieflorent.benfit.GradeInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_button_size_marge"
        android:layout_marginBottom="@dimen/top_button_size_marge">

        <TextView
            android:id="@+id/textView42"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="16dp"
            android:text="@string/descrFonctSecondGrade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coachScoreGrade2"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView54"
            app:layout_constraintTop_toBottomOf="@+id/textView54" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView23"
            app:layout_constraintStart_toStartOf="@+id/imageView23"
            app:layout_constraintTop_toBottomOf="@+id/imageView23"
            app:srcCompat="@drawable/coach_grade_1" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/textView52"
            app:layout_constraintTop_toBottomOf="@+id/textView42"
            app:srcCompat="@drawable/coach_grade_2" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coachScoreGrade3"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView55"
            app:layout_constraintTop_toBottomOf="@+id/textView55" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreGrade1"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView52"
            app:layout_constraintTop_toBottomOf="@+id/textView52" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView20"
            app:layout_constraintStart_toStartOf="@+id/imageView20"
            app:layout_constraintTop_toBottomOf="@+id/imageView20"
            app:srcCompat="@drawable/coach_grade_3" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView42"
            app:srcCompat="@drawable/coach_grade_0" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coachScoreGrade0"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageView23"
            app:layout_constraintStart_toStartOf="@+id/textView51"
            app:layout_constraintTop_toBottomOf="@+id/textView51" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradeFunctionning"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/descrFonctFirstGrade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView26"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/descrFonctGrade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView17"
            app:layout_constraintStart_toStartOf="@+id/imageView17"
            app:layout_constraintTop_toBottomOf="@+id/imageView17"
            app:srcCompat="@drawable/grade1" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreGrade5"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/grade4"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/grade2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView14"
            app:layout_constraintStart_toEndOf="@+id/imageView14"
            app:layout_constraintTop_toTopOf="@+id/imageView14" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:srcCompat="@drawable/grade2" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreGrade3"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreGrade4"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:srcCompat="@drawable/grade5" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/grade5"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreGrade1"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreGrade2"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/grade3"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/grade4" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:srcCompat="@drawable/grade3" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/grade1"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />


        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:srcCompat="@drawable/grade0" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/grade0"
            app:layout_constraintBottom_toBottomOf="@+id/imageView17"
            app:layout_constraintStart_toEndOf="@+id/imageView17"
            app:layout_constraintTop_toTopOf="@+id/imageView17" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/coach_grade_0"
            app:layout_constraintBottom_toBottomOf="@+id/imageView23"
            app:layout_constraintStart_toEndOf="@+id/imageView23"
            app:layout_constraintTop_toTopOf="@+id/imageView23" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coachScoreGrade1"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView19"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="@+id/imageView19" />

        <TextView
            android:id="@+id/textView54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach_grade_2"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView20"
            app:layout_constraintStart_toEndOf="@+id/imageView20"
            app:layout_constraintTop_toTopOf="@+id/imageView20" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/coach_grade_3"
            app:layout_constraintBottom_toBottomOf="@+id/imageView22"
            app:layout_constraintStart_toEndOf="@+id/imageView22"
            app:layout_constraintTop_toTopOf="@+id/imageView22" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreGrade0"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
