<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/padding_30"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_picture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/icon" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/padding_10">

        <TextView
            android:id="@+id/nav_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textColor="@color/dark_text_color"
            android:textSize="28sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/nav_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textColor="@color/dark_text_color"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

</LinearLayout>
